--- a/dyma-trip.yaml
+++ b/dyma-trip.yaml
@@ -1,151 +1,159 @@
-openapi: "3.0.0"
+openapi: 3.0.0
 info:
   version: 1.0.0
-  title: DymaTrip
+  title: Dymatrip API
+  description: API for managing cities, activities, and trips for Dymatrip
 servers:
   - url: http://localhost:80
+    description: Local server
 paths:
   /api/cities:
     get:
-      tags:
-        - Cities
-      summary: Get cities
-      operationId: getCities
+      summary: Get all cities
       responses:
         '200':
-          description: Success
-
+          description: A list of cities
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/City'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/trips:
     get:
-      tags:
-        - Trips
-      summary: Get trips
-      operationId: getTrips
+      summary: Get all trips
       responses:
         '200':
-          description: Success
-
+          description: A list of trips
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Trip'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/trip:
     post:
-      tags:
-        - Trips
-      summary: Create trip
-      operationId: createTrip
+      summary: Create a new trip
       requestBody:
+        description: Trip object to create
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                city:
-                  type: string
-                activities:
-                  type: array
-                  items:
-                    type: object
-                date:
-                  type: string
-                  format: date
+              $ref: '#/components/schemas/Trip'
       responses:
         '200':
-          description: Success
+          description: Trip created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Trip'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
     put:
-      tags:
-        - Trips
-      summary: Update trip
-      operationId: updateTrip
+      summary: Update an existing trip
       requestBody:
+        description: Trip object to update
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                _id:
-                  type: string
-                city:
-                  type: string
-                activities:
-                  type: array
-                  items:
-                    type: object
-                date:
-                  type: string
-                  format: date
+              $ref: '#/components/schemas/Trip'
       responses:
         '200':
-          description: Success
-
+          description: Trip updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Trip'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/city/{cityId}/activity:
     post:
-      tags:
-        - Cities
-      summary: Add activity to a city
-      operationId: addActivityToCity
+      summary: Add an activity to a city
       parameters:
-        - name: cityId
-          in: path
+        - in: path
+          name: cityId
           required: true
           schema:
             type: string
+          description: City ID
       requestBody:
+        description: Activity object to add
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                image:
-                  type: string
-                city:
-                  type: string
-                price:
-                  type: number
-                status:
-                  type: number
-                address:
-                  type: string
-                longitude:
-                  type: number
-                latitude:
-                  type: number
+              $ref: '#/components/schemas/Activity'
       responses:
         '200':
-          description: Success
-
+          description: Activity added successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/City'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/city/{cityId}/activities/verify/{activityName}:
     get:
-      tags: 
-        - Activities
-      summary: Verify uniqueness of a trip
-      operationId: verifyUniquenessOfTrip
+      summary: Verify the uniqueness of an activity in a city
       parameters:
-        - name: cityId
-          in: path
+        - in: path
+          name: cityId
           required: true
           schema:
             type: string
-        - name: activityName
-          in: path
+          description: City ID
+        - in: path
+          name: activityName
           required: true
           schema:
             type: string
+          description: Activity name
       responses:
         '200':
-          description: Ok
+          description: Activity is unique
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'Ok'
         '400':
-          description: L’activité existe déjà
-
+          description: Activity already exists
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'L’activité existe déjà'
   /api/activity/image:
     post:
-      tags:
-        - Activities
       summary: Upload activity image
-      operationId: uploadActivityImage
       requestBody:
+        description: Activity image file to upload
         required: true
         content:
           multipart/form-data:
@@ -157,4 +165,76 @@ paths:
                   format: binary
       responses:
         '200':
-          description: Success
+          description: Image uploaded successfully
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'http://10.0.2.2/public/assets/images/activities/{filename}'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+components:
+  schemas:
+    City:
+      type: object
+      properties:
+        name:
+          type: string
+          example: Paris
+        image:
+          type: string
+          example: http://localhost/assets/images/paris.jpg
+        activities:
+          type: array
+          items:
+            $ref: '#/components/schemas/Activity'
+    Activity:
+      type: object
+      properties:
+        name:
+          type: string
+          example: Louvre
+        image:
+          type: string
+          example: http://localhost/assets/images/activities/louvre.jpg
+        city:
+          type: string
+          example: Paris
+        price:
+          type: number
+          example: 12.0
+        status:
+          type: number
+          example: 0
+        address:
+          type: string
+          example: '123 Main St'
+        longitude:
+          type: number
+          example: 2.3522
+        latitude:
+          type: number
+          example: 48.8566
+    Trip:
+      type: object
+      properties:
+        city:
+          type: string
+          example: Paris
+        activities:
+          type: array
+          items:
+            $ref: '#/components/schemas/Activity'
+        date:
+          type: string
+          format: date
+    ErrorResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          example: Error message
